# OpenGlStudy

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/g/openglstudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JniImpl.cpp
app/src/main/cpp/model/: mesh.h  model.h
app/src/main/cpp/render/: MyGLRenderContext.cpp
app/src/main/cpp/sample/: GLSampleBase.h  Model3DSample.cpp  TriangleSample.cpp
app/src/main/cpp/util/: GLUtils.cpp
app/src/main/java/com/g/openglstudy/: IsoscelesTrangleRender.java  IsoscelesTriangleActivity.java  MainActivity.java  TriangleActivity.java  TriangleRender.java  UseCTriangleActivity.java
app/src/main/java/com/g/openglstudy/audio/: AudioCollector.java
app/src/main/java/com/g/openglstudy/camera/: Camera2Helper.java  CameraActivity.java
app/src/main/java/com/g/openglstudy/egl/: NativeEglRender.java
app/src/main/java/com/g/openglstudy/fliter/: AbstractFBOFilter.java  BaseFilter.java  BeautifyFilter.java  CameraFilter.java  ScreenFilter.java
app/src/main/java/com/g/openglstudy/hockey/: HockeyActivity.java  HockeyRender.java
app/src/main/java/com/g/openglstudy/model/: LoadModelActivity.java  ModelGLSurfaceView.java  ModelMyGLRender.java  MyNativeRender.java
app/src/main/java/com/g/openglstudy/util/: CameraHelper.java  CommonUtils.java  OpenGlUtils.java  ShaderHelper.java  TextResourceReader.java
app/src/main/java/com/g/openglstudy/widget/: GlRenderView.java
app/src/main/java/com/g/openglstudy/wrapper/: GlRenderWrapper.java
app/src/main/res/layout/: activity_camera.xml  activity_f_g_l_view.xml  activity_graphic_plotting.xml  activity_hockey.xml  activity_isosceles_triangle.xml  activity_load_model.xml  activity_main.xml  activity_tringle.xml  item_choose.xml
app/src/main/res/raw/: simple_fragment_shader.glsl  simple_vertex_shader.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/g/openglstudy/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
